Refactored code and added unit tests